[gd_scene load_steps=7 format=3 uid="uid://dajkti00tshjx"]

[ext_resource type="Script" uid="uid://ggah3pb6b0jg" path="res://scenes/game/Game.gd" id="1_7qcb4"]
[ext_resource type="PackedScene" uid="uid://dx5g1ga5km0k" path="res://scenes/player/Player.tscn" id="1_vrspl"]
[ext_resource type="PackedScene" uid="uid://mr1auxuvyd41" path="res://scenes/enemy_handler/EnemyHandler.tscn" id="2_m44fu"]
[ext_resource type="PackedScene" uid="uid://cmmfgesinnrvi" path="res://scenes/combos/Combos.tscn" id="4_365ku"]
[ext_resource type="PackedScene" uid="uid://dtgltfpgaeqjl" path="res://scenes/shields/Shields.tscn" id="5_lyhax"]
[ext_resource type="PackedScene" uid="uid://cct4hltjqrjn5" path="res://scenes/hud/Hud.tscn" id="6_365ku"]

[node name="Game" type="Node2D"]
script = ExtResource("1_7qcb4")

[node name="Background" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0, 0, 0, 1)

[node name="Markers" type="Node2D" parent="."]

[node name="SpawnPoint" type="Marker2D" parent="Markers"]
position = Vector2(322, 0)

[node name="LeftMaxPos" type="Marker2D" parent="Markers"]
position = Vector2(180, 0)

[node name="RightMaxPos" type="Marker2D" parent="Markers"]
position = Vector2(972, 0)

[node name="StartPos" type="Marker2D" parent="Markers"]
position = Vector2(592, 610)

[node name="Player" parent="." node_paths=PackedStringArray("left_max_pos", "right_max_pos", "start_pos") instance=ExtResource("1_vrspl")]
left_max_pos = NodePath("../Markers/LeftMaxPos")
right_max_pos = NodePath("../Markers/RightMaxPos")
start_pos = NodePath("../Markers/StartPos")

[node name="PlayerBullets" type="Node2D" parent="."]

[node name="EnemyHandler" parent="." node_paths=PackedStringArray("spawn_point", "left_max_pos", "right_max_pos") instance=ExtResource("2_m44fu")]
spawn_point = NodePath("../Markers/SpawnPoint")
left_max_pos = NodePath("../Markers/LeftMaxPos")
right_max_pos = NodePath("../Markers/RightMaxPos")

[node name="Explosions" type="Node2D" parent="."]

[node name="BrokenEnemies" type="Node2D" parent="."]

[node name="Shields" parent="." node_paths=PackedStringArray("start_point", "end_point") instance=ExtResource("5_lyhax")]
visible = false
start_point = NodePath("../Markers/LeftMaxPos")
end_point = NodePath("../Markers/RightMaxPos")

[node name="BrokenShields" type="Node2D" parent="."]

[node name="EnemyBullets" type="Node2D" parent="."]

[node name="Combos" parent="." instance=ExtResource("4_365ku")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Hud" parent="CanvasLayer" instance=ExtResource("6_365ku")]
